--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <!-- form start -->
-            <form action="" class="form-content" id="form">
+            <form class="form-content" id="form">
                 <!-- input content -->
                 <div class="form-control">
                     <input type="text" placeholder="First Name" id="first-name">
